<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F8E9"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/men_principal"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="#1B5E20"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp" />

        <Button
            android:id="@+id/btnCrearCarnet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crear_carnet"
            android:backgroundTint="#4CAF50"
            android:padding="16dp"
            android:layout_marginBottom="12dp" />

        <Button
            android:id="@+id/btnListadoVencidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/listado_vencidos"
            android:backgroundTint="#4CAF50"
            android:padding="16dp"
            android:layout_marginBottom="12dp" />

        <Button
            android:id="@+id/btnRegistrarAsistencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrar_asistencia"
            android:backgroundTint="#4CAF50"
            android:padding="16dp"
            android:layout_marginBottom="12dp" />

        <Button
            android:id="@+id/btnRegistrarPersona"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrar_persona"
            android:backgroundTint="#4CAF50"
            android:padding="16dp"
            android:layout_marginBottom="12dp" />

        <Button
            android:id="@+id/btnCargarPago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cargar_pago"
            android:backgroundTint="#2E7D32"
            android:padding="16dp"
            android:layout_marginTop="12dp" />

    </LinearLayout>
</ScrollView>