<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center_horizontal"
    android:background="#FFFFFF">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generar_carnet"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#2E7D32"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="24dp"/>

    <EditText
        android:id="@+id/etDniBuscarCarnet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingrese_dni_del_socio"
        android:inputType="number"
        android:padding="14dp"
        android:background="@android:drawable/editbox_background"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btnGenerarCarnet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buscar_y_generar"
        android:backgroundTint="#2E7D32"
        android:padding="14dp" />

</LinearLayout>